--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.24.0",
+    "firebase": "^9.5.0",
     "jquery": "^3.6.0",
     "json-server": "^0.17.0",
     "react": "^17.0.2",
