--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-query": "^3.33.7",
     "react-router-dom": "^6.0.2",
     "react-scripts": "4.0.3",
+    "styled-components": "^5.3.3",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
