--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.24.0",
+    "date-fns": "^2.27.0",
     "firebase": "^9.5.0",
     "jquery": "^3.6.0",
     "json-server": "^0.17.0",
@@ -15,6 +16,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-loader-spinner": "^4.0.0",
+    "react-loading-skeleton": "^3.0.1",
     "react-query": "^3.33.7",
     "react-router-dom": "^6.0.2",
     "react-scripts": "4.0.3",
