--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,8 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
+# custom firebase edit
+/src/Components/toDoApp/doubleOfToDo.js
+
 # dependencies
 /node_modules
 /.pnp
