--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,9 @@
 # custom firebase edit
 /src/Components/toDoApp/doubleOfToDo.js
 
+# may be this file will be important but now it's not
+/src/Components/profile/toDoSettings/settings.handleEditToDo.js
+
 # dependencies
 /node_modules
 /.pnp
