--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@testing-library/user-event": "^14.0.0",
     "date-fns": "^2.28.0",
     "firebase": "^9.6.10",
+    "flowbite": "^1.4.1",
     "prop-types": "^15.8.1",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
